--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: '${{ github.workspace }}/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
