--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -21,7 +21,7 @@ name: Build and deploy JAR app to Azure Web App
 
 env:
   AZURE_WEBAPP_NAME: 'projectxlab'    # set this to the name of your Azure Web App
-  JAVA_VERSION: '11'                  # set this to the Java version to use
+  JAVA_VERSION: 11                  # set this to the Java version to use
 
 on:
   push:
@@ -43,7 +43,7 @@ jobs:
           cache: 'maven'
 
       - name: Build with Maven
-        run: mvn clean install package --file pom.xml
+        run: mvn clean install 
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
